@@ -8,6 +8,7 @@
 * Updated zoom fader.
 * Added support of variable size of filter dots.
 * Added gain level display for filter info.
+* Updated build scripts and dependencies.
 
 === 1.0.19 ===
 * Updated build scripts and dependencies.
